# my_cli

./: .gitignore  .mycli_config.json  .mycli_config.json.backup  INSTALL.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_completer_verify.py  test_manual_stage8.py  test_manual_stage9.py  test_stage15_statusbar_enhanced.py  test_stage16_context_token_count.py  test_stage16_status_provider.py  test_stage17_simple.py
docs/: Agent配置指南.md  KIMI_CLI_COMPARISON.md  Kimi_CLI官方开发历程学习路线图.md  LEARNING_WORKFLOW.md  LEARNING_WORKFLOW2.md  LEARNING_WORKFLOW3.md  LOCAL_DEV.md  MISSING_MODULES.md  README.md  STAGE_06_SUMMARY.md  STAGE_07_vs_OFFICIAL.md  STAGE_09_SUMMARY.md  STAGE_11_SUMMARY.md  STAGE_12_SUMMARY.md  STAGE_12_UTILS_ARCHITECTURE.md  STAGE_17_COMPLETION_REPORT.md  STAGE_18_3.md  STAGE_19_1_TYPER_MIGRATION.md  STAGE_20_DMAIL_SYSTEM.md  STAGE_21_TOOLS_EXTENSION.md  STAGE_22_1_TAB_THINKING_TOGGLE.md  STAGE_22_3_MODE_SWITCHING.md  STAGE_22_5_CLIPBOARD_IMAGE.md  STAGE_27_FILE_TOOLS.md  STAGE_30_FINAL.md  STAGE_33_12_信号处理修复记录.md  STAGE_33_1_工具加载Bug修复记录.md  STAGE_33_3_Compose架构重构记录.md  STAGE_33_8_依赖注入对齐记录.md  Stage_33_代码清理与对齐记录.md  stage-01-cli-entry.md  stage-04-05-soul-engine.md  stage-06-wire-mechanism.md  wire-architecture-design.md  下一步实现指南.md
docs/process_docs/: 01_项目完整总结文档.md  STAGE_07_SUMMARY.md  STAGE_08_SUMMARY.md  STAGE_10_SUMMARY.md  STAGE_12_SUMMARY.md  STAGE_13_1_COMPLETION_FIX.md  STAGE_13_STATUSBAR.md  STAGE_19_2.md  (+33 more)
examples/: demo_config_save_load.py
kosong-main/: Makefile
my_cli/: README.md  __init__.py  agentspec.py  app.py  cli.py  config.py  constant.py  exception.py  llm.py  metadata.py  session.py  share.py  wire理解.md
tests/: stage_06_test.py  test_live_fix.py  test_manual_stage10.py  test_manual_stage11.py  test_manual_stage12.py  test_stage13_statusbar.py  test_stage14_filemention.py  test_stage16_status_provider.py  test_stage20_dmail.py  test_stage21_think.py  test_stage21_todo.py  test_stage21_web.py  test_stage8_toolcalling.py
(+116 files in other folders)
