# My CLI - Python 项目配置文件（现代方式）

[project]
name = "my-cli"
version = "0.1.0"
description = "从零开始构建你自己的 AI Agent CLI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "cli", "agent", "learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 基础依赖（阶段 1-3）
dependencies = [
    "click>=8.1.0",
]

# 可选依赖（分阶段安装）
[project.optional-dependencies]
# 开发工具
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# 阶段 4：Wire 协议层
stage4 = [
    "aiofiles>=23.0.0",
]
# 阶段 5：Soul 核心引擎
stage5 = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]
# 阶段 6：Shell UI 模式
stage6 = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
# 全部依赖
all = [
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

# 命令行入口
[project.scripts]
my_cli = "my_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/I-who-ant/my_cli"
Repository = "https://github.com/I-who-ant/my_cli"
Issues = "https://github.com/I-who-ant/my_cli/issues"

# 构建系统配置
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools 配置
[tool.setuptools]
packages = ["my_cli"]

[tool.setuptools.package-data]
my_cli = ["py.typed"]

# Black 代码格式化配置
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# Ruff 代码检查配置
[tool.ruff]
line-length = 100
target-version = "py310"

# pytest 测试配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
